--- a/style.css
+++ b/style.css
@@ -4,15 +4,27 @@
 }
 
 .submit_form {
+    z-index: 2;
     position: fixed;
     top: 50%;
     left: 50%;
     /*vertical center*/
     transform: translate(-50%, -50%);
-    visibility: visible;
+    visibility: hidden;
     border: 1px solid black;
+
+    background-color: white;
+}
+
+#submitBtn {
+    position: fixed;
+    right: 30px;
+    top: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    outline: none;
 }
 
 .isVisible {
-    visibility: hidden;
+    visibility: visible;
 }
