--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
 .card {
     border: 1px solid black;
     margin: 10px;
+    max-width: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4px;
+}
+
+.buttonSection {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.cardButton {
+    padding: 3px;
 }
 
 .submit_form {
@@ -14,15 +29,36 @@
     border: 1px solid black;
 
     background-color: white;
+    padding: 15px;
+}
+
+.submit_form * {
+    margin-bottom: 10px;
+}
+
+#closeFormBtn {
+    border:none;
+   background-color:transparent;
+   outline:none;
 }
 
 #submitBtn {
+    background-color: #918d81;
+    color: white;
     position: fixed;
     right: 30px;
     top: 30px;
     padding: 20px;
     border-radius: 20px;
+    border: none;
     outline: none;
+}
+
+#submitBookBtn {
+    margin: 0 auto;
+    display: block;
+    background-color: #a1ada4;
+    color: #fafffc;
 }
 
 .isVisible {
